[package]
name = "haex"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#solstice-2d = "0.2"
solstice-2d = { path = "../solstice/solstice-2d" }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
vec_mut_scan = "0.4"

enumflags2 = "0.7"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
rand_distr = "0.4"
petgraph = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.26"
image = "0.23"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.24", default-features = false, features = ["web-sys"] }
wasm-bindgen = "0.2"
web-sys = "0.3"