[package]
name = "haex"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#solstice-2d = "0.2"
solstice-2d = { path = "../solstice/solstice-2d" }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
vec_mut_scan = "0.4"
serde_json = "1.0"
once_cell = "1.7"
log = "0.4"

enumflags2 = "0.7"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
rand_distr = { version = "0.4", default-features = false, features = ["alloc"] }
petgraph = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.26"
image = "0.23"
rodio = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.24", default-features = false, features = ["web-sys"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "HtmlMediaElement",
    "MediaElementAudioSourceNode",
    "GainNode",
    "AudioParam",
]